// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should render main title correctly  1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <h1>
        Test Title
      </h1>
    </div>
  </div>
</div>
`;

exports[`Title should render sub-title correctly  1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <h2>
        Test Title
      </h2>
    </div>
  </div>
</div>
`;
